Correct dashboard actions spacing

--- a/pages/static/styles/core.css
+++ b/pages/static/styles/core.css
@@ -190,8 +190,8 @@ body {
 
 .dashboard .item .list .element {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
     margin: 20px 0 28px 0;
 }
 
@@ -241,12 +241,14 @@ body {
 
 .dashboard .item .list .element .actions {
     display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .dashboard .item .list .element .actions a {
     display: flex;
     align-items: center;
-    margin: auto 0;
+    margin: auto 15px;
     font-size: 20px;
     text-decoration: underline;
     cursor: pointer;
